# Chain-Responsibility-Python

./: README.md  pyproject.toml
simple_example/: first_middleware.py  last_middleware.py  main.py  middle_middleware.py  middleware.py
simple_example/tests/: test_simple_example.py
