[project]
name = "chain-of-responsiblity-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.4.2",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["simple_example/tests"]
pythonpath = ["simple_example"]
