[project]
name = "chain-of-responsiblity-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.4.2",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["simple_example/tests"]
pythonpath = ["simple_example"]
